--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>2026 Tracker</title>
     <meta name="description" content="2026 New Year's Resolution Tracker">
     <meta name="theme-color" content="#121212">
@@ -12,10 +14,44 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
+
 <body>
     <div id="app">
         <!-- App content will be injected here -->
     </div>
+
+    <!-- Book Logging Modal -->
+    <dialog id="book-modal" class="modal">
+        <form method="dialog" id="book-form">
+            <h2>📚 Book Completed</h2>
+            <div class="form-group">
+                <label for="book-title">Title</label>
+                <input type="text" id="book-title" required placeholder="e.g. Dune">
+            </div>
+            <div class="form-group">
+                <label for="book-rating">Rating (0-5)</label>
+                <input type="number" id="book-rating" min="0" max="5" step="0.5" required placeholder="4.5">
+            </div>
+            <div class="modal-actions">
+                <button type="button" id="cancel-book-btn">Cancel</button>
+                <button type="submit" class="primary-btn">Save</button>
+            </div>
+        </form>
+    </dialog>
+
+    <!-- Clear Data Confirmation Modal -->
+    <dialog id="confirm-modal" class="modal">
+        <form method="dialog" id="confirm-form">
+            <h2 style="color:var(--status-red)">⚠️ Delete All Data?</h2>
+            <p style="margin-bottom:var(--spacing-lg)">This action cannot be undone. All your progress will be lost.</p>
+            <div class="modal-actions">
+                <button type="button" id="cancel-confirm-btn">Cancel</button>
+                <button type="submit" class="primary-btn" style="background:var(--status-red)">Delete
+                    Everything</button>
+            </div>
+        </form>
+    </dialog>
+
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
@@ -25,4 +61,5 @@
         }
     </script>
 </body>
+
 </html>
