--- a/index.html
+++ b/index.html
@@ -52,14 +52,46 @@
         </form>
     </dialog>
 
+    <!-- Connect Modal -->
+    <dialog id="connect-modal" class="modal">
+        <form method="dialog" id="connect-form">
+            <h2>🤝 Connect</h2>
+
+            <div id="connect-suggestions" style="margin-bottom:var(--spacing-md)">
+                <label
+                    style="display:block; margin-bottom:var(--spacing-xs); font-size:0.9rem; color:var(--text-secondary)">Suggestions
+                    (Least Recently Contacted)</label>
+                <div class="suggestions-grid" id="suggestions-list">
+                    <!-- Chips injected here -->
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="connect-name">Person (Last, First)</label>
+                <input type="text" id="connect-name" placeholder="e.g. Smith, John" required>
+            </div>
+
+            <div class="form-group">
+                <label for="connect-select">Or select from history:</label>
+                <select id="connect-select"
+                    style="padding:10px; border-radius:var(--radius-sm); border:1px solid var(--border-color); background:var(--card-bg); color:var(--text-primary); font-size:1rem;">
+                    <option value="">-- Select Person --</option>
+                    <!-- Options injected here -->
+                </select>
+            </div>
+
+            <div class="modal-actions">
+                <button type="button" id="clear-connect-btn" class="secondary-btn"
+                    style="color:var(--status-red); display:none;">Clear</button>
+                <div style="flex-grow:1"></div> <!-- Spacer -->
+                <button type="button" id="cancel-connect-btn">Cancel</button>
+                <button type="submit" class="primary-btn">Log Connection</button>
+            </div>
+        </form>
+    </dialog>
+
     <script src="app.js"></script>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('sw.js').catch(err => console.error('SW registration failed:', err));
-            });
-        }
-    </script>
+
 </body>
 
 </html>
